# ncm

./: .gitignore  Cargo.toml  README.md
src/: client.rs  encrypt.rs  lib.rs  ncm_api_uri.rs  uri.rs
src/client/: mod.rs  model.rs
src/mock/: playlist.json  playlist_detail.json  song_url.json
src/model/: mod.rs  playlist.rs  response.rs  song.rs  track.rs  user.rs
src/util/: mod.rs
