[package]
name = "ncm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
chrono = "0.4.19"
hex = "0.4.3"
num-bigint = "0.4.3"
openssl = "0.10.38"
rand = "0.8.5"
reqwest = { version = "0.11.9", features = ["blocking", "json", "cookies", "gzip"] }
serde = "1.0.136"
serde_json = "1.0.79"
serde_urlencoded = "0.7.1"

[features]

